# bankruptcy-risk-prediction

./: .gitignore  README.md  pixi.toml  pyproject.toml
data/raw/: README.md
src/bankruptcy_risk/: __init__.py  baselines.py  config.py  data_validation.py  decision_tree.py  evaluation.py  exploration.py  features.py  final_evaluation.py  gradient_boosting.py  interpretable_logit.py  interpretation.py  preprocessing.py  random_forest.py  regularized_logit.py  splitting.py  target.py  uncertainty.py  visualization.py
tasks/: task_baselines.py  task_data_validation.py  task_decision_tree.py  task_eda.py  task_evaluation.py  task_features.py  task_final_evaluation.py  task_gradient_boosting.py  task_interpretable_logit.py  task_interpretation.py  task_random_forest.py  task_regularized_logit.py  task_splitting.py  task_target.py  task_uncertainty.py
tests/: test_baselines.py  test_data_validation.py  test_decision_tree.py  test_evaluation.py  test_exploration.py  test_features.py  test_final_evaluation.py  test_gradient_boosting.py  test_interpretable_logit.py  test_interpretation.py  test_preprocessing.py  test_random_forest.py  test_regularized_logit.py  test_splitting.py  test_target.py  test_uncertainty.py
